# trello-lite

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  pyproject.toml
backend/app/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  boards.py  cards.py  lists.py  users.py
frontend/: Dockerfile  package-lock.json
